--- a/config/ros_gz_bridge.yaml
+++ b/config/ros_gz_bridge.yaml
@@ -1,10 +1,11 @@
 # RGBD Camera topics
-- ros_topic_name: "cam_1/color/camera_info"
-  gz_topic_name: "/auv/camera/image_raw"
-  ros_type_name: "sensor_msgs/msg/CameraInfo"
-  gz_type_name: "gz.msgs.CameraInfo"
+- ros_topic_name: "/auv/camera/image"
+  gz_topic_name: "/auv/camera/image"
+  ros_type_name: "sensor_msgs/msg/Image"
+  gz_type_name: "gz.msgs.Image"
   direction: GZ_TO_ROS
   lazy: true # Determines whether connections are created immediately at startup (when false) or only when data is actually requested by a subscriber (when true), helping to conserve system resources at the cost of potential initial delays in data flow.
+
 
 # - ros_topic_name: "cam_1/depth/color/points"
 #   gz_topic_name: "cam_1/points"
@@ -13,16 +14,10 @@
 #   direction: GZ_TO_ROS
 #   lazy: true
 
-  # LIDAR configuration
-# - ros_topic_name: "scan"
-#   gz_topic_name: "scan"
-#   ros_type_name: "sensor_msgs/msg/LaserScan"
-#   gz_type_name: "gz.msgs.LaserScan"
-#   direction: GZ_TO_ROS
-#   lazy: false
+
 
 # IMU configuration
-- ros_topic_name: "imu/data"
+- ros_topic_name: "/auv/imu"
   gz_topic_name: "/auv/imu"
   ros_type_name: "sensor_msgs/msg/Imu"
   gz_type_name: "gz.msgs.IMU"
@@ -44,3 +39,4 @@
   gz_type_name: "gz.msgs.Clock"
   direction: GZ_TO_ROS
   lazy: false
+
